--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HalamanMenu"></activity>
+        <activity android:name=".ProfilActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".HalamanMenu" />
         <activity android:name=".GameActivity" />
-        <activity android:name=".DualPlayerActivity"></activity>
-        <activity android:name=".SplashScreen" >
+        <activity android:name=".DualPlayerActivity" />
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
